2013-05-13 knystrom@users.sourceforge.net
   * src/reporting/m_exception.f90: negative LUN allowed
   * tests/reporting/test_m_exception.f90: added test case for negative LUN
   * doc/reporting/m_exception.*: corresponding changes in doc
	
2012-12-23 arjenmarkus@users.sourceforge.net
   * src/reporting/m_multilog.f90: added new module provided by Karin Nystrom
   * tests/reporting/test_m_multilog.f90: test program for the new module provided by Karin Nystrom
   * doc/reporting/m_multilog.man: describe the new module
   * tests/reporting/makefile: include the test program for the m_multilog module
   * src/computing/random_permutations.f90: added new module for random permutations
   * tests/computing/test_random_permutations.f90: added test program for random permutations
   * tests/computing/makefile: include the test program for random permutations
   * doc/cgi/fortran-fastcgi-nginx.html: added instructions for using Fast-CGI with Nginx webserver

2012-11-27 arjenmarkus@users.sourceforge.net
   * src/reporting/m_logger.f90: use the new flush statement instead of closing/opening the log file
   * tests/reporting/test_m_logger.f90: add a test that aborts the program, so we can ensure the log
         file will be written completely to disk
   * src/datastructures/generic_stack.f90: module for implementing a stack - work in progress
   * src/datastructures/basic_buffer.f90: module for implementing a circular buffer - work in progress

2012-11-21 arjenmarkus@users.sourceforge.net
   * src/reporting/m_logger.f90: apply patch by Karin Nystrom (introducing Fortran 2008 feature NEWUNIT=)
   * tests/reporting/makefile: add rules for making three more test programs (only test_report still missing)
   * doc/reporting/m_logger.man: document the use of NEWUNIT=

2012-11-04 arjenmarkus@users.sourceforge.net
   * src/computing/libdate.f90: implemented routine scan_date
   * doc/computing/libdate.man: documentation of routine scan_date